internal/scenarios/tcpl4lb/manifests/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: scn-tcp-lb-gateway
  namespace: scn-tcp-lb
spec:
  gatewayClassName: bnk-gatewayclass
  addresses:
  - type: IPAddress
    value: 203.0.113.106
  listeners:
  - name: tcp-listener
    protocol: TCP
    port: 8080
    allowedRoutes:
      namespaces: {from: Same}
      kinds:
      - kind: L4Route
        group: gateway.k8s.f5net.com
